crates/edgedb_codegen/tests/compile/macros/input_tuple.rs
use edgedb_codegen::edgedb_query;

fn main() {
	edgedb_query!(example, "select <bool>$0");
}
